[FIX]Frontend QUIT_GROUP was too big

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -118,3 +118,4 @@ section.pad iframe {
   border-radius: 5px 0 5px 5px;
 }
 
+h2 button.cancel { font-size: medium; }
